[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
bytes = "1.4.0"
chrono = "0.4.23"
hex = "0.4.3"
p256 = { version = "0.12.0", features = ["pem"] }
rand = "0.8.5"
sha2 = "0.10.6"
encode-decode-derive = {path = "encode-decode-derive" }
syn = "1.0.108"
log = "0.4"
simple_logger = { version = "4.0.0", features = ["threads"] }
